# FastAuto

./: README.md  codecov.yml  docker-compose.yml  docker-compose.yml.save
backend/: .dockerignore  .env  .env.example  .env.prod.example  .env.test  Dockerfile  Dockerfile.nginx  README.md  Taskfile.dev.yml  Taskfile.yml  alembic.ini  compose.override.yml  compose.prod.yml  compose.yml  mypy-baseline.txt  pyproject.toml
backend/alembic/: PRODUCTION_ROLLOUT.md  env.py
backend/alembic/versions/: 20260321_8db3193d5e83_initial.py  20260322_85d6782fda00_add_user_role.py  20260322_935201a5d9f9_add_thumb_url_to_car_images.py  20260329_7a6d389f1733_add_phone_brand_index_statuses_and_car_.py  20260331_b8e601617ee3_add_car_offer_images.py  20260402_c7e0eb59076f_add_ai_conversations_and_messages.py  20260503_27cae697e8e7_add_carofferstatus.py  20260509_a1b2c3d4e5f6_optimise_indexes.py  20260510_b7e9f21a3d8c_add_viewing_slot_unique_index.py  20260510_c5c3d57d5ca0_add_password_changed_at.py  20260510_d4e8f91b2c7a_add_message_user_id_purchase_uniqueness.py  20260510_e3a7b52f9d1c_add_pg_trgm_indexes.py  20260510_f5c9d83e2b4a_add_primary_image_partial_indexes.py  20260514_a3c4e5f6b7d8_add_sorting_indexes.py  20260515_b2d4f6a8c1e3_add_composite_status_sort_indexes.py  20260523_82cf852f0775_create_catalog_schema.py  20260523_cdfc7d8c9c70_extend_users_phone_verification.py  20260523_e5af69fdead9_marketplace_tables.py  20260525_catalog_colors.py  20260525_catalog_seed_state.py  20260525_drop_legacy_tables.py  20260525_geo_regions_cities.py  20260525_listings_city_fk.py  20260525_listings_color_fk.py  20260525_normalize_users_phone.py  20260526_perf_indexes.py  20260527_a1b2c3d4e5f7_reservation_domain.py  20260527_b2c3d4e5f8a1_tickets_reservation_fk.py  20260527_c3d4e5f8a1b9_drop_transactions_payout.py  20260527_d4e5f8a1b9c2_notifications.py  20260527_e5f6a2b3c4d5_reservation_release_pending_idx.py  20260527_f6b7c8d9e0a1_reservation_deposit_release_due_at.py  20260604_create_catalog_options.py  20260609_cascade_delete_user_data.py  20260609_fix_user_delete_fk2.py  20260609_user_preferences.py
backend/app/: main.py
backend/app/api/: main.py
backend/app/core/: cache.py  cache_keys.py  config.py  db.py  inmem_cache.py  log.py  pre_warm.py  rate_limit.py  redis.py  security.py  sentry.py  storage.py  token_blacklist.py
backend/app/crud/: __init__.py  base.py  catalog.py  favorites.py  listings.py  notifications.py  payout.py  reservations.py  tickets.py  users.py  viewings.py
backend/app/models/: __init__.py  ai.py  catalog.py  favorites.py  geo.py  listings.py  notifications.py  payout.py  preferences.py  reservations.py  tickets.py  users.py
backend/app/schemas/: admin.py  ai.py  catalog.py  common.py  favorites.py  geo.py  listings.py  payments.py  phone.py  reservations.py  tickets.py  users.py
backend/app/services/: scheduler.py
backend/app/utils/: masking.py  pagination.py  request.py  units.py
backend/data/: carsbase2_dump.sql  catalog_colors.json  russia-cities.json  russia-regions.json
backend/nginx/: nginx.conf  nginx_main.conf  security_headers.conf
backend/pgbouncer/: pgbouncer.ini
backend/scripts/: import_catalog.py  initial_data.py  prestart.ps1  prestart.sh  seed_catalog.py  seed_dev_listings.py  seed_prod_listings.py  start.sh  start_dev.sh  wait_for_db.py
backend/tests/: conftest.py
backend/tests/b2b/: conftest.py  test_full_reservation_flow.py
backend/tests/factories/: users.py
backend/tests/fixtures/: auth.py  committed.py  db.py  ollama.py  redis.py  reservation.py  storage.py
backend/tests/helpers/: images.py
backend/tests/integration/: test_catalog_api.py  test_catalog_crud.py  test_catalog_schema.py  test_displacement_litres.py  test_drop_transactions_payout_migration.py  test_favorites_api.py  test_listing_crud.py  test_listings_api.py  test_migration_users.py  test_notifications_api.py  test_notifications_migration.py  test_otp_api.py  test_profile_and_favorites_regressions.py  test_reservation_crud.py  test_reservations_api.py  (+10 more)
(+229 files in other folders)
