[project]
name = "car-sales"
version = "0.1.0"
description = "Информационная система «Продажа автомобилей — учёт сделок»"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "granian[reload]>=2.7.4",
    "sqlmodel>=0.0.22,<1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.3.3",
    "minio>=7.2.20",
    "alembic>=1.14.0",
    "pyjwt[crypto]>=2.10.0",
    "pwdlib[argon2]>=0.3.0",
    "python-multipart>=0.0.20",
    "pillow>=11.0.0",
    "aiofiles>=24.0.0",
    "tenacity>=9.0.0",
    "redis>=7.4.0",
    "ollama>=0.4.0",
    "httpx>=0.28.0",
    "orjson>=3.11.9",
    "email-validator>=2.0.0",
    "rloop>=0.2.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "idna>=3.15",
    "yookassa>=3.10.1",
    "apscheduler>=3.11.2",
    "starlette>=1.0.1",
    "structlog>=24",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "fakeredis>=2.26.0",
    "freezegun>=1.5.0",
    "hypothesis>=6.115.0",
    "factory-boy>=3.3.0",
    "polyfactory>=2.18.0",
    "respx>=0.21.0",
    "Pillow>=11.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "coverage>=7.6.0",
    "greenlet>=3.3.2",
    "pytest-timeout>=2.3.0",
    "pip-audit>=2.7.0",
    "mypy-baseline>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["alembic"]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "yookassa.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "ARG001",   # unused arguments
    "T201",     # print statements
    "S",        # bandit security
    "N",        # pep8-naming
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default args (FastAPI pattern)
    "B904",   # raise without from (HTTPException pattern)
    "S101",   # assert (used in tests)
    "S105",   # hardcoded passwords (env var names)
    "S106",
    "N805",   # first arg not self (pydantic validators)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG001"]
"scripts/**" = ["S311"]  # seed scripts use random for fake data, not crypto

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p no:cacheprovider",
    "--tb=short",
    "--timeout=60",
    "--timeout-method=thread",
]
markers = [
    "unit: unit test",
    "integration: test with real DB/Redis",
    "e2e: full HTTP flow",
    "b2b: backend-to-backend scenario test (requires real DB)",
    "slow: slow test (>500ms)",
    "race: concurrency test",
    "smoke: smoke test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/alembic/*",
    "app/__init__.py",
    "*/migrations/*",
]
parallel = true

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]
